--- a/public/theme/united/css/main.css
+++ b/public/theme/united/css/main.css
@@ -2,128 +2,6 @@ body {
     padding-top: 50px
 }
 
-#banner {
-    border-bottom: none
-}
-
-.page-header h1 {
-    font-size: 4em
-}
-
-.bs-docs-section {
-    margin-top: 8em
-}
-
-footer {
-    margin: 5em 0
-}
-
-footer li {
-    float: left;
-    margin-right: 1.5em;
-    margin-bottom: 1.5em
-}
-
-footer p {
-    clear: left;
-    margin-bottom: 0
-}
-
-.splash {
-    background-color: #1c2533;
-    background: -webkit-linear-gradient(70deg, #080f1f 30%, #2b4b5a 87%, #435e67 100%);
-    background: -o-linear-gradient(70deg, #080f1f 30%, #2b4b5a 87%, #435e67 100%);
-    background: -ms-linear-gradient(70deg, #080f1f 30%, #2b4b5a 87%, #435e67 100%);
-    background: -moz-linear-gradient(70deg, #080f1f 30%, #2b4b5a 87%, #435e67 100%);
-    background: linear-gradient(20deg, #080f1f 30%, #2b4b5a 87%, #435e67 100%);
-    background-attachment: fixed;
-    padding: 6em 0 2em;
-    color: #fff;
-    text-align: center
-}
-
-.splash .alert {
-    margin: 4em 0 2em
-}
-
-.splash h1 {
-    font-size: 4em
-}
-
-.splash #social {
-    margin-top: 6em
-}
-
-.section-tout {
-    padding: 4em 0 3em;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: #eaf1f1
-}
-
-.section-tout .fa {
-    margin-right: .5em
-}
-
-.section-tout p {
-    margin-bottom: 3em
-}
-
-.section-preview {
-    padding: 4em 0 4em
-}
-
-.section-preview .preview {
-    margin-bottom: 4em;
-    background-color: #eaf1f1;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 6px
-}
-
-.section-preview .preview .image {
-    padding: 5px
-}
-
-.section-preview .preview .image img {
-    border: 1px solid rgba(0, 0, 0, 0.1)
-}
-
-.section-preview .preview .options {
-    text-align: center;
-    padding: 0 2em 2em
-}
-
-.section-preview .preview .options p {
-    margin-bottom: 2em
-}
-
-.section-preview .dropdown-menu {
-    text-align: left
-}
-
-.section-preview .lead {
-    margin-bottom: 2em
-}
-
-@media (max-width:767px) {
-    .section-preview .image img {
-        width: 100%
-    }
-}
-
-.bsa .one .bsa_it_ad {
-    border: none !important;
-    background-color: transparent !important
-}
-
-.bsa .one .bsa_it_ad .bsa_it_t, .bsa .one .bsa_it_ad .bsa_it_d {
-    color: inherit !important
-}
-
-.bsa .one .bsa_it_p {
-    display: none
-}
-
 /* First level of nav */
 .bs-sidenav {
     margin-top: 30px;
@@ -138,24 +16,19 @@ footer p {
 /* All levels of nav */
 .bs-sidebar .nav > li > a {
     display: block;
-    color: #716b7a;
     padding: 5px 20px;
 }
 
 .bs-sidebar .nav > li > a:hover,
 .bs-sidebar .nav > li > a:focus {
     text-decoration: none;
-    background-color: #e5e3e9;
-    border-right: 1px solid #dbd8e0;
 }
 
 .bs-sidebar .nav > .active > a,
 .bs-sidebar .nav > .active:hover > a,
 .bs-sidebar .nav > .active:focus > a {
     font-weight: bold;
-    color: #008cba;
     background-color: transparent;
-    border-right: 1px solid #008cba;
 }
 
 /* Nav: second level (shown on .active) */
@@ -198,234 +71,163 @@ footer p {
     margin-top: 10px;
 }
 
-pre {
-    background-color: #E5F9FF;
+/* Hemisu Light */
+/* Original theme - http://noahfrederick.com/vim-color-scheme-hemisu/ */
+/* Pretty printing styles. Used with prettify.js. */
+/* SPAN elements with the classes below are added by prettyprint. */
+/* plain text */
+.pln {
+    color: #111111;
+}
+
+@media screen {
+    /* string content */
+    .str {
+        color: #739200;
+    }
+
+    /* a keyword */
+    .kwd {
+        color: #739200;
+    }
+
+    /* a comment */
+    .com {
+        color: #999999;
+    }
+
+    /* a type name */
+    .typ {
+        color: #ff0055;
+    }
+
+    /* a literal value */
+    .lit {
+        color: #538192;
+    }
+
+    /* punctuation */
+    .pun {
+        color: #111111;
+    }
+
+    /* lisp open bracket */
+    .opn {
+        color: #111111;
+    }
+
+    /* lisp close bracket */
+    .clo {
+        color: #111111;
+    }
+
+    /* a markup tag name */
+    .tag {
+        color: #111111;
+    }
+
+    /* a markup attribute name */
+    .atn {
+        color: #739200;
+    }
+
+    /* a markup attribute value */
+    .atv {
+        color: #ff0055;
+    }
+
+    /* a declaration */
+    .dec {
+        color: #111111;
+    }
+
+    /* a variable name */
+    .var {
+        color: #111111;
+    }
+
+    /* a function name */
+    .fun {
+        color: #538192;
+    }
+}
+/* Use higher contrast and text-weight for printable form. */
+@media print, projection {
+    .str {
+        color: #006600;
+    }
+
+    .kwd {
+        color: #006;
+        font-weight: bold;
+    }
+
+    .com {
+        color: #600;
+        font-style: italic;
+    }
+
+    .typ {
+        color: #404;
+        font-weight: bold;
+    }
+
+    .lit {
+        color: #004444;
+    }
+
+    .pun, .opn, .clo {
+        color: #444400;
+    }
+
+    .tag {
+        color: #006;
+        font-weight: bold;
+    }
+
+    .atn {
+        color: #440044;
+    }
+
+    .atv {
+        color: #006600;
+    }
+}
+/* Style */
+pre.prettyprint {
+    background: white;
+    font-family: Menlo, "Bitstream Vera Sans Mono", "DejaVu Sans Mono", Monaco, Consolas, monospace;
+    font-size: 12px;
+    line-height: 1.5;
+    border: 1px solid #cccccc;
     padding: 10px;
-    border: 1px solid #E1E1E8;
 }
 
-
-
-
-table {
-    max-width: 100%;
-    background-color: transparent;
+/* Specify class=linenums on a pre to get line numbering */
+ol.linenums {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-th {
-    text-align: left;
+/* IE indents via margin-left */
+li.L0,
+li.L1,
+li.L2,
+li.L3,
+li.L4,
+li.L5,
+li.L6,
+li.L7,
+li.L8,
+li.L9 {
+    /* */
 }
 
-table {
-    width: 100%;
-    margin-bottom: 21px;
-}
-
-table > thead > tr > th,
-table > tbody > tr > th,
-table > tfoot > tr > th,
-table > thead > tr > td,
-table > tbody > tr > td,
-table > tfoot > tr > td {
-    padding: 8px;
-    line-height: 1.428571429;
-    vertical-align: top;
-    border-top: 1px solid #dddddd;
-}
-
-table > thead > tr > th {
-    vertical-align: bottom;
-    border-bottom: 2px solid #dddddd;
-}
-
-table > caption + thead > tr:first-child > th,
-table > colgroup + thead > tr:first-child > th,
-table > thead:first-child > tr:first-child > th,
-table > caption + thead > tr:first-child > td,
-table > colgroup + thead > tr:first-child > td,
-table > thead:first-child > tr:first-child > td {
-    border-top: 0;
-}
-
-table > tbody + tbody {
-    border-top: 2px solid #dddddd;
-}
-
-table table {
-    background-color: #ffffff;
-}
-
-table > thead > tr > th,
-table > tbody > tr > th,
-table > tfoot > tr > th,
-table > thead > tr > td,
-table > tbody > tr > td,
-table > tfoot > tr > td {
-    padding: 5px;
-}
-
-table {
-    border: 1px solid #dddddd;
-}
-
-table > thead > tr > th,
-table > tbody > tr > th,
-table > tfoot > tr > th,
-table > thead > tr > td,
-table > tbody > tr > td,
-table > tfoot > tr > td {
-    border: 1px solid #dddddd;
-}
-
-table > thead > tr > th,
-table > thead > tr > td {
-    border-bottom-width: 2px;
-}
-
-table > tbody > tr:nth-child(odd) > td,
-table > tbody > tr:nth-child(odd) > th {
-    background-color: #f9f9f9;
-}
-
-table > tbody > tr:hover > td,
-table > tbody > tr:hover > th {
-    background-color: #f5f5f5;
-}
-
-table col[class*="col-"] {
-    position: static;
-    display: table-column;
-    float: none;
-}
-
-table td[class*="col-"],
-table th[class*="col-"] {
-    display: table-cell;
-    float: none;
-}
-
-table > thead > tr > .active,
-table > tbody > tr > .active,
-table > tfoot > tr > .active,
-table > thead > .active > td,
-table > tbody > .active > td,
-table > tfoot > .active > td,
-table > thead > .active > th,
-table > tbody > .active > th,
-table > tfoot > .active > th {
-    background-color: #f5f5f5;
-}
-
-table > tbody > tr > .active:hover,
-table > tbody > .active:hover > td,
-table > tbody > .active:hover > th {
-    background-color: #e8e8e8;
-}
-
-table > thead > tr > .success,
-table > tbody > tr > .success,
-table > tfoot > tr > .success,
-table > thead > .success > td,
-table > tbody > .success > td,
-table > tfoot > .success > td,
-table > thead > .success > th,
-table > tbody > .success > th,
-table > tfoot > .success > th {
-    background-color: #dff0d8;
-}
-
-table > tbody > tr > .success:hover,
-table > tbody > .success:hover > td,
-table > tbody > .success:hover > th {
-    background-color: #d0e9c6;
-}
-
-table > thead > tr > .danger,
-table > tbody > tr > .danger,
-table > tfoot > tr > .danger,
-table > thead > .danger > td,
-table > tbody > .danger > td,
-table > tfoot > .danger > td,
-table > thead > .danger > th,
-table > tbody > .danger > th,
-table > tfoot > .danger > th {
-    background-color: #f2dede;
-}
-
-table > tbody > tr > .danger:hover,
-table > tbody > .danger:hover > td,
-table > tbody > .danger:hover > th {
-    background-color: #ebcccc;
-}
-
-table > thead > tr > .warning,
-table > tbody > tr > .warning,
-table > tfoot > tr > .warning,
-table > thead > .warning > td,
-table > tbody > .warning > td,
-table > tfoot > .warning > td,
-table > thead > .warning > th,
-table > tbody > .warning > th,
-table > tfoot > .warning > th {
-    background-color: #fcf8e3;
-}
-
-table > tbody > tr > .warning:hover,
-table > tbody > .warning:hover > td,
-table > tbody > .warning:hover > th {
-    background-color: #faf2cc;
-}
-
-@media (max-width: 767px) {
-    table {
-        width: 100%;
-        margin-bottom: 15.75px;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        border: 1px solid #dddddd;
-        -ms-overflow-style: -ms-autohiding-scrollbar;
-        -webkit-overflow-scrolling: touch;
-    }
-    table > table {
-        margin-bottom: 0;
-    }
-    table > table > thead > tr > th,
-    table > table > tbody > tr > th,
-    table > table > tfoot > tr > th,
-    table > table > thead > tr > td,
-    table > table > tbody > tr > td,
-    table > table > tfoot > tr > td {
-        white-space: nowrap;
-    }
-    table > table {
-        border: 0;
-    }
-    table > table > thead > tr > th:first-child,
-    table > table > tbody > tr > th:first-child,
-    table > table > tfoot > tr > th:first-child,
-    table > table > thead > tr > td:first-child,
-    table > table > tbody > tr > td:first-child,
-    table > table > tfoot > tr > td:first-child {
-        border-left: 0;
-    }
-    table > table > thead > tr > th:last-child,
-    table > table > tbody > tr > th:last-child,
-    table > table > tfoot > tr > th:last-child,
-    table > table > thead > tr > td:last-child,
-    table > table > tbody > tr > td:last-child,
-    table > table > tfoot > tr > td:last-child {
-        border-right: 0;
-    }
-    table > table > tbody > tr:last-child > th,
-    table > table > tfoot > tr:last-child > th,
-    table > table > tbody > tr:last-child > td,
-    table > table > tfoot > tr:last-child > td {
-        border-bottom: 0;
-    }
-}
-
-h1 {
-    padding-bottom: 9.5px;
-    margin: 42px 0 21px;
-    border-bottom: 1px solid #dddddd;
+/* Alternate shading for lines */
+li.L1,
+li.L3,
+li.L5,
+li.L7,
+li.L9 {
+    /* */
 }
